...

                        <SearchView
                            android:id="@+id/searchViewResult"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
...

                        <Button
                            android:id="@+id/Button_ID_ExtendedSearchStart"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <Button
                            android:id="@+id/expand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <Button
                            android:id="@+id/Button_ID_ResetFilterExtendedSearch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                                <SeekBar
                                    android:id="@+id/seekBar_ID_Entfernung"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <Spinner
                                    android:id="@+id/Spinner_ID_ExtendedSearch"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <CheckBox
                                    android:id="@+id/checkBox_ID_BiologischerAnbau"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <CheckBox
                                    android:id="@+id/cb_category_1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <CheckBox
                                    android:id="@+id/cb_category_2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <CheckBox
                                    android:id="@+id/cb_category_3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <CheckBox
                                    android:id="@+id/cb_category_4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <CheckBox
                                    android:id="@+id/cb_category_5"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <CheckBox
                                    android:id="@+id/cb_category_6"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <CheckBox
                                    android:id="@+id/cb_seller_0"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <CheckBox
                                    android:id="@+id/cb_seller_1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <CheckBox
                                    android:id="@+id/cb_transfer_0"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <CheckBox
                                    android:id="@+id/cb_transfer_1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <CheckBox
                                    android:id="@+id/cb_transfer_2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...

                                <Button
                                    android:id="@+id/Button_ID_ExtendedSearchStart2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
...
