<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/logoOld"
        android:orderInCategory="0"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="always"
        android:title="Home"/>

    <item
        android:id="@+id/buttonMenuLoginOld"
        android:orderInCategory="0"
        android:title="Login"
        app:showAsAction="always" />

</menu>